# triton-cpu

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  TenstorrentSetup.md  name.conf  triton.txt  triton_cpu.cc  triton_npu.cc
.github/patches/: .pre-commit-config.yaml.patch  AMDScheduleLoops.cpp.patch  CMakeLists.txt.patch  ControlFlowOpToLLVM.cpp.patch  RegisterTritonDialects.h.patch  TritonGPUToLLVMUtility.cpp.patch  TritonGPUToLLVMUtility.h.patch  _internal_testing.py.patch  axis_info.patch  axis_info_nfca_visitor.patch  gluon.test_core.py.patch  ir.cc.patch  test_core.py.patch
.github/workflows/: ci.yml  integration-tests-cpu.yml  integration-tests-macos.yml  integration-tests-tenstorrent.yml  pre-commit.yml  runner-preparation.yml  update-triton.yml
backend/: compiler.py  driver.py  knobs.py
cpu/include/Analysis/: AxisInfo.h  LaneMapAnalysis.h
cpu/include/Dialect/TritonCPU/IR/: CMakeLists.txt  TritonCPUDialect.td  TritonCPUOps.td
cpu/include/Dialect/TritonCPU/Transforms/: Passes.td
cpu/include/TritonCPUToLLVM/: Passes.h  Passes.td
cpu/lib/: CMakeLists.txt
cpu/lib/Analysis/: AxisInfo.cpp  CMakeLists.txt  LaneMapAnalysis.cpp
cpu/lib/Dialect/TritonCPU/IR/: Ops.cpp
cpu/lib/Dialect/TritonCPU/Transforms/: AccelerateMatmul.cpp  AddKernelStream.cpp  CMakeLists.txt  Coalesce.cpp  LaneMapAnalysis.h  LoopPeeling.cpp  MakePersistentKernel.cpp  SplitBlocks.cpp  TestLaneMapAnalysis.cpp  TileAndFuse.cpp
cpu/lib/TritonCPUToLLVM/: Allocation.cpp  Allocation.h  CMakeLists.txt  ControlFlowOpToLLVM.cpp  ConvertLayoutOpToLLVM.cpp  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  FuncOpToLLVM.cpp  GPUOpToLLVM.cpp  GenericOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  LowerDotMicrokernelToSME.cpp  LowerSMEMicrokernelToLLVM.cpp  MakeDynamicRangeOpToLLVM.cpp  MaskedOpsToLLVM.cpp  MemoryOpToLLVM.cpp  OutlineDotMicrokernel.cpp  PatternTritonGPUOpToLLVM.h  SharedMemoryGlobalConversion.cpp  TargetInfo.cpp  TargetInfo.h  TritonCPUToLLVM.cpp  Utility.cpp  Utility.h
include/: CMakeLists.txt
include/Dialect/TritonCPU/IR/: CMakeLists.txt  Dialect.h  TritonCPUDialect.td  TritonCPUOps.td
include/TritonCPUToLLVM/: Passes.h
include/TritonNPUToLLVM/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Dialect/TritonCPU/IR/: CMakeLists.txt  Dialect.cpp  Ops.cpp
lib/TritonCPUToLLVM/: CMakeLists.txt  MemoryOpToLLVM.cpp
lib/TritonNPUToLLVM/: CMakeLists.txt  GPUOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  PatternTritonGPUOpToLLVM.h  TargetInfo.cpp  TargetInfo.h  TritonNPUToLLVM.cpp  Utility.h
npu/include/: CMakeLists.txt
npu/include/Dialect/TritonCPU/IR/: Dialect.h  TritonCPUDialect.td  TritonCPUOps.td
npu/include/Dialect/TritonCPU/Transforms/: Passes.h
npu/include/TritonCPUToLLVM/: CMakeLists.txt  Passes.h  Passes.td
npu/include/TritonNPUToLLVM/: Passes.h  Passes.td  TypeConverter.h
npu/lib/: CMakeLists.txt
npu/lib/Dialect/TritonCPU/IR/: Ops.cpp
npu/lib/Dialect/TritonCPU/Transforms/: AddKernelStream.cpp  Coalesce.cpp
npu/lib/TritonCPUToLLVM/: Allocation.cpp  CMakeLists.txt  GPUOpToLLVM.cpp  KernelWrapper.cpp  LoadStoreOpToLLVM.cpp  MaskedOpsToLLVM.cpp  PatternTritonGPUOpToLLVM.h  SharedMemoryGlobalConversion.cpp  TargetInfo.cpp  TritonCPUToLLVM.cpp  Utility.cpp
npu/lib/TritonNPUToLLVM/: Allocation.cpp  CMakeLists.txt  ElementwiseOpToLLVM.cpp  FuncOpToLLVM.cpp  GPUOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  MathToUKernel.cpp  MemoryOpToLLVM.cpp  PatternTritonGPUOpToLLVM.h  SharedMemoryGlobalConversion.cpp  TargetInfo.cpp  TargetInfo.h  TritonNPUToLLVM.cpp  TypeConverter.cpp  UKernelToLLVM.cpp  Utility.h
python/test/: conftest.py  test_cpu_features.py  test_nexus_program_ids.py  test_program_ids.py
python/test/nexus/: test_program_ids.py
python/tutorials/: 01-vector-add.loop.py  02-fused-softmax.py  03-matrix-multiplication.py  03-matrix-multiplication.sme.py  06-fused-attention.py
scripts/: build-tt-mlir.sh
test/: CMakeLists.txt  filtered_test_list.txt  lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: axis-info-generic.mlir
test/Conversion/: dot.mlir  generic-op-loops.mlir  load_store.mlir
test/LaneMapAnalysis/: 2d_pointwise.mlir  2d_pointwise_store.mlir  not_pointwise_store.mlir  pointwise_store.mlir
test/Transform/: accelerate_matmul.mlir  fuse_cvt.mlir  outline_dot_microkernel.mlir  tile_and_fuse.mlir
utils/: CMakeLists.txt  cpu_utils.cpp
